# agimus_project_msgs

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix  package.xml
.github/workflows/: ci_ros2.yml  nix.yml  update-flake-lock.yml
msg/: MpcInput.msg  TrajectorySample.msg
